<resources>
    <string name="app_name">ByeSpy</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="login_button">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="register_button">REGISTER</string>
    <string name="conversations_fragment">Conversations</string>
    <string name="contacts_fragment">Contacts</string>
    <string name="settings_fragment">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_send_label">Message ...</string>
    <string name="code_verification_text">Enter code</string>
    <string name="prompt_code">Verification code</string>
    <string name="code_verification_hint">Check your email</string>
    <string name="id_desc">Id:</string>
    <string name="email_desc">Email:</string>
    <string name="logout">Logout</string>
    <string name="chat">Chat</string>
    <string name="add_contact">Add new contact</string>
    <string name="reset_password">Reset password</string>
    <string name="new_conversation_title">New conversation</string>
    <string name="add_conversation">Add conversation</string>
    <string name="choose_profile">Choose image</string>
    <string name="prompt_contact_email">Contact email</string>
    <string name="prompt_conversation_name">Conversation name</string>
    <string name="contact_info">Contact info</string>
    <string name="clear_all_messages">Clear all messages</string>
    <string name="delete_contact">Delete contact</string>
    <string name="invitations_sent">Invitations Sent</string>
    <string name="invitations_received">Invitations Received</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="cancel_invitation">Cancel</string>
    <string name="enter_email">Enter email</string>
    <string name="email">Email</string>
    <string name="send_invite">Send invitation</string>
    <string name="invitations">Invitations</string>
    <string name="refresh_invitations">Refresh</string>
    <string name="profile">Profile</string>
    <string name="prompt_username">New username</string>
    <string name="save_username">Save username</string>
    <string name="prompt_new_password">New password</string>
    <string name="prompt_new_password_confirm">Confirm new password</string>
    <string name="prompt_current_password">Current password</string>
    <string name="save_password">Save password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_username">Change username</string>
    <string name="change_password">Change password</string>
    <string name="change_user">Change user</string>
    <string name="username_prompt">Username</string>
    <string name="save_image">Save image</string>
</resources>